--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name" translatable="false">Secure Connect</string>
     <string name="app_website" translatable="false">https://www.mctwireless.com</string>
+    <string name="app_ddns" translatable="false">ddns.sc.mctwireless.com</string>
+    <string name="app_ddns_port" translatable="false">53</string>
     <string name="app_license" translatable="false">GPL-3.0-or-later</string>
     <string name="app_description">Allow voice and video communication without any server or Internet access. Simply scan each others contact QR-Code and call each other. This works on most networks, e.g. at home, in community networks or at work.</string>
     <string name="action_settings">Settings</string>
